tests/baselines/reference/noDuplicateJsdoc1.errors.txt
tests/cases/conformance/jsdoc/a.js(2,11): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/jsdoc/a.js (1 errors) ====
    /** doc */
    const a = b = () => 0;
              ~
!!! error TS2304: Cannot find name 'b'.
    